<resources>
    <string name="app_name">MyWeather</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="favorites">Favorite</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="celsius">Cº</string>
    <string name="fahrenheit">ºF</string>
    <string name="temperature_unit">Temperature unit</string>
    <string name="description_language">Description Language</string>
    <string name="english_en">English (EN)</string>
    <string name="portuguese_pt">Portuguese (PT)</string>
    <string name="save">Save</string>
</resources>